<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.pinetask.com.MainActivity">

    <item
        android:id="@+id/listItemsMenuItem"
        android:orderInCategory="102"
        android:title="@string/list_items"
        android:icon="@drawable/ic_list_white_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/chatMenuItem"
        android:orderInCategory="103"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat_bubble_outline_white_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/membersMenuItem"
        android:orderInCategory="104"
        android:title="@string/members"
        android:icon="@drawable/ic_group_white_24dp"
        app:showAsAction="never" />

</menu>