<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/PineTaskToolbarStyle"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <Spinner
                android:id="@+id/listSpinner"
                android:layout_width="250dp"
                android:visibility="visible"
                android:spinnerMode="dialog"
                android:backgroundTint="@color/white"
                android:foregroundTint="@color/white"
                android:layout_height="@dimen/icon_size"/>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/colorPrimary"
            app:itemIconTint="@drawable/bottom_menu_selector"
            app:itemTextColor="@drawable/bottom_menu_selector"
            app:menu="@menu/bottom_navigation_menu" />

        <TextView
            android:id="@+id/noListsFoundTextView"
            android:text="@string/no_lists_found"
            android:padding="20dp"
            android:visibility="gone"
            android:layout_below="@id/toolbar"
            android:layout_above="@id/bottomNavigationView"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_below="@id/toolbar"
            android:layout_above="@id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </android.support.v4.view.ViewPager>

    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/leftDrawerLayout"
        android:background="@color/white"
        android:layout_gravity="left"
        android:paddingTop="100dp"
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userNameTextView"
            android:textColor="@color/black_67percent"
            android:background="@drawable/highlight_selector"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_30percent"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/manageListsTextView"
            android:text="@string/manage_lists"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_list_black_24dp"
            android:drawablePadding="10dp"
            android:background="@drawable/highlight_selector"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_30percent"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/settingsTextView"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_settings_black_24dp"
            android:drawablePadding="10dp"
            android:background="@drawable/highlight_selector"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_30percent"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/helpTextView"
            android:text="@string/help"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/ic_help_outline_black_24dp"
            android:drawablePadding="10dp"
            android:background="@drawable/highlight_selector"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_30percent"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/aboutTextView"
            android:text="@string/about"
            android:textColor="@color/black"
            android:background="@drawable/highlight_selector"
            android:drawableLeft="@drawable/ic_info_outline_black_24dp"
            android:drawablePadding="10dp"
            android:textSize="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:background="@color/black_30percent"
            android:layout_width="match_parent"
            android:layout_height="1dp" />



    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

